--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 :root {
   --bg-green: #86e7b8;
@@ -23,7 +22,9 @@ html {
   }
 }
 body {
-  font-family: 'Inter', sans-serif;
+  /* font-family: 'Inter', sans-serif; */
+  font-family: 'Clash Display', sans-serif;
+
   font-weight: 400;
   color: var(--text-color);
 }
