--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,13 @@ html {
     font-size: 58%;
   }
 }
+@media (max-width: 1260px) {
+  html {
+    font-size: 53%;
+  }
+}
 body {
-  /* font-family: 'Inter', sans-serif; */
-  font-family: 'Clash Display', sans-serif;
+  font-family: 'Inter', sans-serif;
 
   font-weight: 400;
   color: var(--text-color);
