--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,9 @@
 .nav {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 2rem 0;
+  /* justify-content: space-between; */
 }
 .nav-brand {
   margin-right: 6rem;
@@ -12,7 +14,6 @@
   display: flex;
   align-items: center;
   gap: 3.5rem;
-  margin-right: auto;
 }
 .nav-item:link,
 .nav-item:visited {
@@ -22,12 +23,86 @@
   font-size: 1.6rem;
 }
 .nav-cta {
+  justify-content: flex-end;
+}
+.openNav-cta {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .cta-link {
   text-decoration: none;
   color: var(--color-black);
   font-size: 1.6rem;
   margin-right: 3.4rem;
+}
+
+.menu-btns {
+  z-index: 999;
+  display: none;
+  padding: 1.2rem;
+  background-color: #999;
+}
+
+.gpt3__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.open-nav {
+  padding: 2rem 4rem;
+  position: absolute;
+  right: 0;
+  left: 0;
+  width: 100%;
+  top: 10rem;
+  margin: 0 auto;
+  border-radius: 2rem;
+  width: 100%;
+  max-width: 80rem;
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  z-index: 999999;
+}
+.open-nav-links {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: space-between;
+}
+.openNav-cta button {
+  margin-left: 1.5rem;
+}
+@media (max-width: 768px) {
+  .nav-cta,
+  .nav-links {
+    display: none;
+  }
+  .menu-btns {
+    display: block;
+  }
+  .search button {
+    padding: 1.7rem 2.5rem;
+  }
+  .flex {
+    display: none;
+  }
+}
+@media (max-width: 589px) {
+  .open-nav {
+    max-width: 40rem;
+  }
+  .open-nav-links {
+    flex-direction: column;
+  }
+  .nav-item {
+    margin-bottom: 3rem;
+  }
+  .openNav-cta {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
