--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -2,27 +2,32 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 4rem;
-  place-items: center;
+  /* place-items: inherit; */
 }
 .features-heading {
   font-size: 4.8rem;
   font-family: 'Clash Display';
   font-weight: 600;
+  padding-top: 1rem;
 }
 .features-summary {
   font-size: 1.8rem;
   line-height: 2.8rem;
+  padding-top: 1rem;
   max-width: 52.6rem;
   font-weight: 400;
 }
 .margin-bottom {
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 .card {
   border: 0.2rem solid var(--text-color);
   border-radius: 2rem;
   padding: 4.2rem 3.7rem;
   transition: transform 0.3s;
+}
+.dollar {
+  font-weight: 400;
 }
 .card:hover {
   transform: translateY(-1.9rem);
@@ -44,4 +49,31 @@
 .card-cta {
   font-weight: 600;
   font-size: 1.6rem;
+}
+/* queries */
+@media (max-width: 1056px) {
+  .features-grid {
+    place-items: unset;
+  }
+  .card-3 {
+    grid-column: 1/-1;
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 768px) {
+  .card-3 {
+    width: 100%;
+  }
+
+  .features-grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 1.6rem;
+  }
+  .features-summary {
+    max-width: none;
+  }
+  .margin-bottom {
+  }
 }
