--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,8 +1,3 @@
-.grid-4-cols {
-  display: grid;
-  gap: 9rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
 .ft-logo {
   margin-bottom: 2.4rem;
 }
@@ -28,13 +23,13 @@
 .search {
   border: solid 1px #12141d;
   box-shadow: 0 0.4rem 6rem rgba(40, 55, 79, 0.1);
-  /* max-width: 33rem; */
   width: 100%;
   display: flex;
   padding: 0.6rem;
-
+  align-items: center;
   border-radius: 1rem;
 }
+
 .search input {
   border: none;
   position: relative;
@@ -48,7 +43,6 @@
   outline: none;
 }
 .search button {
-  /* position: absolute; */
   font-size: 1.4rem;
   font-weight: 600;
   background-color: var(--bg-green);
@@ -56,6 +50,7 @@
   border-radius: 1rem;
   border: none;
   cursor: pointer;
+  width: 100%;
 }
 .ft-item {
   cursor: pointer;
@@ -78,4 +73,30 @@
 }
 .ft-margin {
   margin-bottom: 1.5rem;
+}
+.copyright {
+  padding: 2rem 0;
+  font-size: 1.6rem;
+  border-top: solid 0.1rem var(--text-color);
+}
+/* QUIRIES */
+@media (max-width: 1056px) {
+  .search button {
+    padding: 1.7rem 2.5rem;
+  }
+}
+@media (max-width: 768px) {
+  .ft-box-1 {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+  .ft-box-2 {
+    grid-row: 2;
+  }
+  .ft-box-3 {
+    grid-row: 2;
+  }
+  .ft-box-4 {
+    grid-row: 3;
+  }
 }
