--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -41,7 +41,7 @@
   z-index: 999;
   display: none;
   padding: 1.2rem;
-  background-color: #999;
+  background-color: transparent;
 }
 
 .gpt3__navbar-links {
